--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@ img.emoji {
 	<header id="masthead" class="site-header" role="banner">
 		<div class="wrap">
 			<div class="site-branding">
-								<p class="site-title"><a href="index.html" rel="home">Mapster</a></p><p class="site-description screen-reader-text">Camilo Maldonado - Cartógrafo</p>			</div><!-- .site-branding -->
+								<p class="site-title"><a href="index.html" rel="home">Cartográfico</a></p><p class="site-description screen-reader-text">Camilo Maldonado - Cartógrafo</p>			</div><!-- .site-branding -->
 
 			<button id="site-navigation-toggle" class="menu-toggle" >
 				<span class="menu-toggle-icon"></span>
      		</button><!-- #site-navigation-menu-toggle -->
 
 			<nav id="site-navigation" class="main-navigation" role="navigation">
-				<div class="menu-primary-container"><ul id="primary-menu" class="menu"><li id="menu-item-248" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-248"><a href="https://design.maker.themepatio.com/blog/">Blog</a></li>
-<li id="menu-item-663" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-663"><a href="https://design.maker.themepatio.com/style-guide/">Recursos</a></li>
-<li id="menu-item-649" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-649"><a href="https://design.maker.themepatio.com/contacts/">Contacto</a></li>
+				<div class="menu-primary-container"><ul id="primary-menu" class="menu"><li id="menu-item-248" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-248"><a href="https://medium.com/cartogr%C3%A1fi-co/">Blog</a></li>
+<li id="menu-item-663" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-663"><a href="https://medium.com/cartogr%C3%A1fi-co/recursos-para-cartograf%C3%ADa-57aa0dab1270">Recursos</a></li>
+<li id="menu-item-649" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-649"><a href="hhttps://medium.com/cartogr%C3%A1fi-co/tagged/contacto">Contacto</a></li>
 </ul></div>			</nav><!-- #site-navigation -->
 		</div><!-- .column -->
 	</header><!-- #masthead -->
@@ -122,21 +122,21 @@ img.emoji {
 
 <article id="post-646" class="project post-646 portfolio type-portfolio status-publish has-post-thumbnail hentry portfolio-category-illustrations">
 
-	<a class="project-thumbnail" href="www.ceelat.com/mapas/fedepalma"><img width="480" height="380" src="img/fedepalma.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
+	<a class="project-thumbnail" href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed"><img width="480" height="380" src="img/sismos_colombia.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
 	<header class="project-header">
 
-		<h2 class="project-title"><a href="https://design.maker.themepatio.com/portfolio/mineral-admiration/" rel="bookmark">Plantas de Biomasa</a></h2>
-		<div class="project-categories"><a href="https://design.maker.themepatio.com/project-category/illustrations/" rel="tag">Interactivo</a></div>
+		<h2 class="project-title"><a href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed" rel="bookmark">Eventos sísmicos en Colombia</a></h2>
+		<div class="project-categories"><a href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed" rel="tag">Interactivo</a></div>
 	</header><!-- .project-header -->
 
 </article><!-- #post-## -->
 <article id="post-646" class="project post-646 portfolio type-portfolio status-publish has-post-thumbnail hentry portfolio-category-illustrations">
 
-	<a class="project-thumbnail" href="www.ceelat.com/mapas/fedepalma"><img width="480" height="380" src="img/fedepalma.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
+	<a class="project-thumbnail" href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#6/3.952/-80.024"><img width="480" height="380" src="img/ConcentracionTierra.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
 	<header class="project-header">
 
-		<h2 class="project-title"><a href="https://design.maker.themepatio.com/portfolio/mineral-admiration/" rel="bookmark">Plantas de Biomasa</a></h2>
-		<div class="project-categories"><a href="https://design.maker.themepatio.com/project-category/illustrations/" rel="tag">Interactivo</a></div>
+		<h2 class="project-title"><a href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#6/4.346/-79.124" rel="bookmark">Concentración de la tierra en Colombia</a></h2>
+		<div class="project-categories"><a href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#6/4.346/-79.124" rel="tag">Interactivo</a></div>
 	</header><!-- .project-header -->
 
 </article><!-- #post-## -->
