--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@ img.emoji {
 	<footer id="colophon" class="site-footer" role="contentinfo">
 		<div class="wrap">
 							<nav id="site-footer-navigation" class="footer-navigation" role="navigation">
-					<div class="menu-social-container"><ul id="menu-social" class="menu"><li id="menu-item-129" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-129"><a href="https://twitter.com/themepatio">Twitter</a></li>
-<li id="menu-item-130" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-130"><a href="https://dribbble.com/dmtrmrv">Dribbble</a></li>
-<li id="menu-item-128" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-128"><a href="https://www.facebook.com/themepatio">Facebook</a></li>
+					<div class="menu-social-container"><ul id="menu-social" class="menu"><li id="menu-item-129" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-129"><a href="https://cartografico.github.io">Github</a></li>
+<li id="menu-item-130" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-130"><a href="https://www.gnu.org/licenses/copyleft.es.html">CopyLeft</a></li>
 </ul></div>				</nav><!-- #site-navigation -->
 			
 			
