--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ img.emoji {
 			<nav id="site-navigation" class="main-navigation" role="navigation">
 				<div class="menu-primary-container"><ul id="primary-menu" class="menu"><li id="menu-item-248" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-248"><a href="https://medium.com/cartogr%C3%A1fi-co/">Blog</a></li>
 <li id="menu-item-663" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-663"><a href="https://medium.com/cartogr%C3%A1fi-co/recursos-para-cartograf%C3%ADa-57aa0dab1270">Recursos</a></li>
-<li id="menu-item-649" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-649"><a href="hhttps://medium.com/cartogr%C3%A1fi-co/tagged/contacto">Contacto</a></li>
+<li id="menu-item-649" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-649"><a href="https://medium.com/cartogr%C3%A1fi-co/tagged/contacto">Contacto</a></li>
 </ul></div>			</nav><!-- #site-navigation -->
 		</div><!-- .column -->
 	</header><!-- #masthead -->
