Cambio en el href del link to blog

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ img.emoji {
      		</button><!-- #site-navigation-menu-toggle -->
 
 			<nav id="site-navigation" class="main-navigation" role="navigation">
-				<div class="menu-primary-container"><ul id="primary-menu" class="menu"><li id="menu-item-248" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-248"><a href="https://medium.com/cartogr%C3%A1fi-co/" target="_blank">Blog</a></li>
+				<div class="menu-primary-container"><ul id="primary-menu" class="menu"><li id="menu-item-248" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-248"><a href="https://medium.com/@cartografico" target="_blank">Blog</a></li>
 <li id="menu-item-663" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-663"><a href="https://medium.com/cartogr%C3%A1fi-co/recursos-para-cartograf%C3%ADa-57aa0dab1270" target="_blank" >Recursos</a></li>
 <li id="menu-item-649" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-649"><a href="https://medium.com/cartogr%C3%A1fi-co/tagged/contacto" target="_blank" >Contacto</a></li>
 </ul></div>			</nav><!-- #site-navigation -->
