add target="_blank" to article

--- a/index.html
+++ b/index.html
@@ -111,32 +111,32 @@ img.emoji {
 <div class="portfolio-grid portfolio-grid-col-3">
 <article id="post-646" class="project post-646 portfolio type-portfolio status-publish has-post-thumbnail hentry portfolio-category-illustrations">
 
-	<a class="project-thumbnail" href="http://ceelat.com/mapas/fedepalma"><img width="480" height="380" src="img/fedepalma.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
+	<a class="project-thumbnail" target="_blank" href="http://ceelat.com/mapas/fedepalma"><img width="480" height="380" src="img/fedepalma.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
 	<header class="project-header">
 
-		<h2 class="project-title"><a href="http://ceelat.com/mapas/fedepalma" rel="bookmark">Plantas de Biomasa</a></h2>
-		<div class="project-categories"><a href="http://ceelat.com/mapas/fedepalma" rel="tag">Interactivo</a></div>
+		<h2 class="project-title"><a target="_blank" href="http://ceelat.com/mapas/fedepalma" rel="bookmark">Plantas de Biomasa</a></h2>
+		<div class="project-categories"><a target="_blank" href="http://ceelat.com/mapas/fedepalma" rel="tag">Interactivo</a></div>
 	</header><!-- .project-header -->
 
 </article><!-- #post-## -->
 
 <article id="post-646" class="project post-646 portfolio type-portfolio status-publish has-post-thumbnail hentry portfolio-category-illustrations">
 
-	<a class="project-thumbnail" href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed"><img width="480" height="380" src="img/sismos_colombia.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
+	<a class="project-thumbnail" target="_blank" href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed"><img width="480" height="380" src="img/sismos_colombia.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
 	<header class="project-header">
 
-		<h2 class="project-title"><a href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed" rel="bookmark">Eventos sísmicos en Colombia</a></h2>
-		<div class="project-categories"><a href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed" rel="tag">Interactivo</a></div>
+		<h2 class="project-title"><a target="_blank" href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed" rel="bookmark">Eventos sísmicos en Colombia</a></h2>
+		<div class="project-categories"><a target="_blank" href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed" rel="tag">Interactivo</a></div>
 	</header><!-- .project-header -->
 
 </article><!-- #post-## -->
 <article id="post-646" class="project post-646 portfolio type-portfolio status-publish has-post-thumbnail hentry portfolio-category-illustrations">
 
-	<a class="project-thumbnail" href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#5/4.434/-71.499"><img width="480" height="380" src="img/ConcentracionTierra.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
+	<a class="project-thumbnail" target="_blank"  href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#5/4.434/-71.499"><img width="480" height="380" src="img/ConcentracionTierra.png" class="attachment-480x480 size-480x480 wp-post-image" alt="Mapa Fedepalma" srcset="" sizes="(max-width: 480px) 100vw, 480px" data-attachment-id="324" data-permalink="" data-orig-file="" data-orig-size="1240,1587" data-comments-opened="0" data-image-meta="" data-image-title="Mapa fedepalma" data-image-description="" data-medium-file="" data-large-file="" /></a>
 	<header class="project-header">
 
-		<h2 class="project-title"><a href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#5/4.434/-71.499" rel="bookmark">Concentración de la tierra en Colombia</a></h2>
-		<div class="project-categories"><a href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#5/4.434/-71.499" rel="tag">Interactivo</a></div>
+		<h2 class="project-title"><a target="_blank" href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#5/4.434/-71.499" rel="bookmark">Concentración de la tierra en Colombia</a></h2>
+		<div class="project-categories"><a target="_blank" href="http://a.tiles.mapbox.com/v3/ceelat.map-8k329cd3.html?secure#5/4.434/-71.499" rel="tag">Interactivo</a></div>
 	</header><!-- .project-header -->
 
 </article><!-- #post-## -->
