Cambio enlaces a google fonts y Font family en css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="http://gmpg.org/xfn/11">
 <title>Camilo Maldonado</title>
-<link rel='dns-prefetch' href='//design.maker.themepatio.com' />
+<link rel='dns-prefetch' href="//design.maker.themepatio.co" />
 <link rel='dns-prefetch' href='//s0.wp.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
 <link rel="alternate" type="application/rss+xml" title="Maker &raquo; Feed" href="https://design.maker.themepatio.com/feed/" />
@@ -44,6 +44,7 @@ img.emoji {
 <link rel="icon" href="img/LogoCartografico.png" sizes="32x32" />
 <link rel="icon" href="img/LogoCartografico.png" sizes="192x192" />
 <link rel="apple-touch-icon-precomposed" href="img/LogoCartografico.png" />
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
 <meta name="msapplication-TileImage" content="img/LogoCartografico.png" />
 			<style type="text/css" id="wp-custom-css">
 				/* CSS3 Columns */
