--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
           <li>
             <div class="col-md-12">
               <blockquote>
-                <h1>Hola! Me llamo Camilo</h1>
-                <p>Geógrafo, Colombia.</p>
+                <h1>Hola!  Mi nombre es Camilo, y éste es mi portafolio.</h1>
+                <p>Bienvenidos.</p>
               </blockquote>
             </div>
           </li>
           <li>
             <div class="col-md-12">
               <blockquote>
-                <h1>Hola! Me llamo Camilo</h1>
+                <h1>Hola!  Mi nombre es Camilo, y éste es mi portafolio.</h1>
                 <p>Fun with maps.</p>
               </blockquote>
             </div>
