--- a/about.html
+++ b/about.html
@@ -68,9 +68,7 @@
           <div class="bio-content">
             <h4>Camilo Maldonado</h4>
             <h5>Geógrafo.</h5>
-            <p>Soy egresado de la Universidad Nacional de Colombia.  Me encanta hacer mapas. Entusiasta del desarrollo web y el diseño. Activista por los derechos digitales. Éste es mi portafolio, bienvenidos. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.vel eu leo.</p>
-            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+            <p>Soy egresado de la Universidad Nacional de Colombia. Cuento con más de 5 años de experiencia profesional en el diseño y desarrollo de cartografía temática e interactiva.  Analista de información cualitativa y cuantitativa. He trabajado con organizaciónes sociales en la atención de población en situación de riesgo. Entusiasta del desarrollo web. Activista por los derechos digitales.</p>
           </div>
         </div>
       </div>
@@ -85,16 +83,11 @@
       <div class="col-md-12">
         <p>
         <ul class="footer-share">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
-          <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+          <li><a target="_blank" href="https://github.com/cartografico"><i class="fa fa-github"></i></a></li>
         </ul>
         </p>
-        <p>© 2015 All rights reserved. All Rights Reserved<br>
-          Made with <i class="fa fa-heart pulse"></i> by <a href="http://kamalchaneman.com/">Designstub</a></p>
+        <p>© 2018 ningún derecho reservado - Copyleft<br>
+          <!--Hecho con el <i class="fa fa-heart pulse"></i> por <a href="http://kamalchaneman.com/">Camilo</a></p>-->
       </div>
     </div>
   </div>
