--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-2.jpg" class="work-box"> <img src="images/work-2.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Project Name</h5>
+            <h5>FEDEPALMA</h5>
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
@@ -154,8 +154,7 @@
       <div class="col-md-12">
         <p>
         <ul class="footer-share">
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a target="_blank" href="https://github.com/cartografico"><i class="fa fa-github"></i></a></li>
         </ul>
         </p>
         <p>© 2018 ningún derecho reservado - Copyleft<br>
