--- a/contact.html
+++ b/contact.html
@@ -88,16 +88,11 @@
       <div class="col-md-12">
         <p>
         <ul class="footer-share">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
-          <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+          <li><a target="_blank" href="https://github.com/cartografico"><i class="fa fa-github"></i></a></li>
         </ul>
         </p>
-        <p>© 2015 All rights reserved. All Rights Reserved<br>
-          Made with <i class="fa fa-heart pulse"></i> by <a href="http://kamalchaneman.com/">Designstub</a></p>
+        <p>© 2018 ningún derecho reservado - Copyleft<br>
+          <!--Hecho con el <i class="fa fa-heart pulse"></i> por <a href="http://kamalchaneman.com/">Camilo</a></p>-->
       </div>
     </div>
   </div>
