--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-2.jpg" class="work-box"> <img src="images/work-2.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a target="_blank" href="http://ceelat.org/mapas/fedepalma/" class="work-box"> <img src="images/work-2.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>FEDEPALMA</h5>
@@ -88,10 +88,10 @@
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-3.jpg" class="work-box"> <img src="images/work-3.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a target="_blank" href="https://ceelat.carto.com/builder/d6c62140-bf89-4b50-b5fb-305f49de0e62/embed" class="work-box"> <img src="images/work-3.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Project Name</h5>
+            <h5>Sismos históricos Colombia</h5>
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
@@ -100,7 +100,7 @@
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-4.jpg" class="work-box"> <img src="images/work-4.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Project Name</h5>
+            <h5>Mapa de placas: estático</h5>
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
