--- a/contact.html
+++ b/contact.html
@@ -61,18 +61,18 @@
     <div class="row">
       <div class="col-md-5 col-sm-5">
         <div class="bio">
-          <h4>I am honest, discreet and always focus on your goals.<br>
-            If you are looking for a experienced designer, just leave me a message and I'll contact you soon.</h4>
+          <h4>Si tienes alguna pregunta o necesitas ayuda con algún proyecto,<br>
+            Me puedes escribir por medio de éste formulario. </h4>
         </div>
       </div>
       <div class="col-md-7 col-sm-7 conForm">
         <div class="contact">
           <div id="message"></div>
           <form method="post" action="php/contact.php" name="cform" id="cform">
-            <input name="name" id="name" type="text" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Your name..." >
-            <input name="email" id="email" type="email" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" placeholder="Email Address..." >
-            <textarea name="comments" id="comments" cols="" rows="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Project Details..."></textarea>
-            <input type="submit" id="submit" name="send" class="submitBnt" value="Send">
+            <input name="name" id="name" type="text" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Tu nombre..." >
+            <input name="email" id="email" type="email" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" placeholder="Correo electrónico" >
+            <textarea name="comments" id="comments" cols="" rows="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Asunto"></textarea>
+            <input type="submit" id="submit" name="send" class="submitBnt" value="Enviar">
             <div id="simple-msg"></div>
           </form>
         </div>
