--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
     <div class="header-content clearfix"> <a class="logo" href="index.html"><img src="images/logo.png" alt=""></a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
-          <li><a href="about.html">About me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="#">External Link</a></li>
+          <li><a href="about.html">Sobre mi</a></li>
+          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="#">Recursos</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
@@ -46,7 +46,7 @@
         <li>
           <div class="col-md-12">
             <blockquote>
-              <p>Contact</p>
+              <p>Contacto</p>
             </blockquote>
           </div>
         </li>
@@ -62,7 +62,7 @@
       <div class="col-md-5 col-sm-5">
         <div class="bio">
           <h4>Si tienes alguna pregunta o necesitas ayuda con algún proyecto,<br>
-            Me puedes escribir por medio de éste formulario. </h4>
+            me puedes escribir por medio de éste formulario. </h4>
         </div>
       </div>
       <div class="col-md-7 col-sm-7 conForm">
