Actualizacion del html
Adicción detextos de los article

--- a/portafolio.html
+++ b/portafolio.html
@@ -50,18 +50,13 @@
                 <article>
                     <img src="./img/mapa3.png" alt="">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Ipsum accusamus accusantium fuga doloribus.
-                        Quisqua.
+                        El mapa muestra una linea de tiempo de los eventos sísmicos ocurridos dentro del territorio colombiano.
                     </p> 
                 </article>
                 <article>
                     <img src="./img/mapa4.png" alt="">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        sapiente quia eligendi commodi obcaecati odio.
-                        Corrupti unde possimus velit doloribus odio quod,
-                        quos adipisci voluptate.
+                        Mapa estático expone el esquema general del sistema de fallas sobre el cual está emplazado el territorio de Colombia.
                     </p> 
                 </article>
                 
