stamp name changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <h1> ~ cartografico@dev.com:$ Muy pronto<span>_<span></h1>
+    <h1>~ cartografico@dev:$ Muy pronto<span>_<span></h1>
     
 </body>
 <script src="script.js"></script>
